<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="10dp"
        android:text="@string/about_description"
        android:textSize="18sp" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:text="@string/bmi_range_1"
                android:textAlignment="viewStart" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:text="@string/bmi_range_1_desc"
                android:textAlignment="viewStart" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:text="@string/bmi_range_2"
                android:textAlignment="viewStart" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:text="@string/bmi_range_2_desc"
                android:textAlignment="viewStart" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:text="@string/bmi_range_3"
                android:textAlignment="viewStart" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:text="@string/bmi_range_3_desc"
                android:textAlignment="viewStart" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:text="@string/bmi_range_4"
                android:textAlignment="viewStart" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:text="@string/bmi_range_4_desc"
                android:textAlignment="viewStart" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_weight="1"
        android:onClick="btnDone_clicked"
        android:text="@string/done"
        android:textAlignment="center"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:background="@color/color_monogram"
        android:textColor="@color/colorWhite"/>

</LinearLayout>